Bug 100088 - piglit.spec.arb_get_texture_sub_image.arb_get_texture_sub_image regressions
Summary: piglit.spec.arb_get_texture_sub_image.arb_get_texture_sub_image regressions
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Samuel Pitoiset
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-06 20:24 UTC by Mark Janes
Modified: 2017-03-06 20:38 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2017-03-06 20:24:42 UTC
On all intel hardware, the following piglit tests regressed:

piglit.spec.arb_get_texture_sub_image.arb_get_texture_sub_image-errors
piglit.spec.arb_get_texture_sub_image.arb_get_texture_sub_image-cubemap
piglit.spec.arb_get_texture_sub_image.arb_get_texture_sub_image-get

by:
5ae54c0cf7acfb792d2ca9b22cd5fb5ba811d32c
Author:     Samuel Pitoiset <samuel.pitoiset@gmail.com>
getteximage: avoid to lookup textures with id 0

This fixes the following assertion when the key is 0.

main/hash.c:181: _mesa_HashLookup_unlocked: Assertion `key' failed.

Fixes: 633c959fae ("getteximage: Return correct error value when texure object is not found")
Signed-off-by: Samuel Pitoiset <samuel.pitoiset@gmail.com>
Reviewed-by: Marek Olšák <marek.olsak@amd.com>


EG:
/tmp/build_root/m64/lib/piglit/bin/arb_get_texture_sub_image-get -auto -fbo
Testing GL_TEXTURE_1D GL_RGB 64 x 1 x 1
Failure for GL_TEXTURE_1D:
Unexpected GL error: GL_INVALID_VALUE 0x501
(Error at ../tests/spec/arb_get_texture_sub_image/get.c:388)
Comment 1 Samuel Pitoiset 2017-03-06 20:38:54 UTC
Should be fixed by https://cgit.freedesktop.org/mesa/mesa/commit/?id=4317cd96d3022ad0ef7e1d5ffa82f5c2693bb44e.

Sorry.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.